# spec-driven-projects

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST_v0.3.0.md  IMPLEMENTATION-SUMMARY.md  PHASE3-IMPLEMENTATION-SUMMARY.md  README.md  RELEASE_NOTES_v0.3.0.md  SPEC-KIT-DOCUMENTATION-INDEX.md  SPEC-KIT-EVOLUTION-PLAN.md  SPEC-KIT-EVOLUTION-SUMMARY.md  SPEC-KIT-QUICK-REFERENCE.md  SPEC-KIT-VISUAL-GUIDE.md  SUPPORT.md  pyproject.toml
.github/: IMPLEMENTATION-PROMPT-PHASE1.md  IMPLEMENTATION-PROMPT-PHASE3.md  IMPLEMENTATION-PROMPT-PHASE4.md  IMPLEMENTATION-PROMPT.md
.github/workflows/: lint.yml  release.yml
NUAA-examples/: NUAA AOD Care Charter Implentation Guide Proposal.html
docs/: docfx.json  index.md  installation.md  local-development.md  nuaa-cli-extension.md  quickstart.md
docs/history/: spec-driven.md
initiatives/001-peer-led-naloxone/: spec.md
nuaa-kit/: CHANGELOG.md  QUICKSTART.md  README.md  REVIEW-FINDINGS.md  STATUS.md  accessibility-guidelines.md  evaluation-data-dictionary.md  glossary.md
nuaa-kit/commands/: assemble.md  clarify.md  design.md  document.md  draft.md  gate-check.md  measure.md  mission.md  plan.md  propose.md  refine.md  report.md  review.md  revise.md  schema.json  specify.md  status.md
nuaa-kit/docs/: evolution-guide.md  multi-agent-setup.md  update-guide.md  workflow-diagram.md
nuaa-kit/examples/: README.md  indicators-schema.csv
nuaa-kit/microsoft365/: README.md
nuaa-kit/templates/: agent-file-template.md  budget-calculator.md  document-plan-template.md  existing-program-analysis.md  final-document-template.md  impact-framework.md  logic-model.md  mission-constitution-template.md  program-design.md  program-specification-template.md  proposal.md  section-template.md
scripts/bash/: add-nuaa-function.sh  check-gate-status.sh  check-placeholders.sh  check-prerequisites.sh  common.sh  create-new-feature.sh  create-new-initiative.sh  create-section-draft.sh  export-document.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: add-nuaa-function.ps1  check-gate-status.ps1  check-placeholders.ps1  check-prerequisites.ps1  (+7 more)
templates/: plan-template.md  tasks-template.md  vscode-settings.json
tests/: test_assemble_review_export.py  test_cli_basic.py  test_draft_revise.py  test_plan_gate_status.py  test_specify_clarify.py
(+15 files in other folders)
