[project]
name = "nuaa-cli"
version = "0.1.0"
description = "NUAA CLI - AI-Assisted Project Management for NSW Users and AIDS Association. Built on Spec-Driven Development methodology."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
nuaa = "specify_cli:main"
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

