[project]
name = "nuaa-cli"
version = "0.1.0"
description = "NUAA CLI - AI-Assisted Project Management for NSW Users and AIDS Association. Built on Spec-Driven Development methodology."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
nuaa = "nuaa_cli:main"
specify = "nuaa_cli:main"  # Legacy alias for backwards compatibility

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nuaa_cli"]

