[project]
name = "nuaa-cli"
version = "0.4.0"
description = "NUAA CLI - AI-Assisted Project Management for NSW Users and AIDS Association. Built on Spec-Driven Development methodology."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4.0",
    "black>=24.4",
]

[project.scripts]
nuaa = "nuaa_cli:main"
specify = "nuaa_cli:main"  # Legacy alias for backwards compatibility

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nuaa_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = [
    "E",  # pycodestyle
    "F",  # pyflakes
]
ignore = [
    # allow more flexible formatting in CLI module
]

[tool.ruff.per-file-ignores]
"src/nuaa_cli/__init__.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
    "tests",
]

